# OpenARC

./: .config.log.swp  .gitignore  Dockerfile  INSTALL.md  KNOWNBUGS  LICENSE  LICENSE.Sendmail  Makefile.am  README  RELEASE_NOTES  configure.ac  copyright-check
contrib/: Makefile.am
contrib/docs/: Makefile.am  draft-andersen-arc-02.txt  draft-andersen-arc-04.txt  draft-andersen-arc-05.txt  draft-andersen-arc.xml
contrib/init/: Makefile.am
contrib/init/generic/: Makefile.am  README  openarc
contrib/init/redhat/: .gitignore  Makefile.am  openarc.in
contrib/init/solaris/: Makefile.am  openarc  openarc.xml
contrib/spec/: .gitignore  Makefile.am  openarc.spec  openarc.spec.in
contrib/systemd/: .gitignore  Makefile.am  openarc.service.in
libopenarc/: .gitignore  Makefile.am  arc-canon.c  arc-canon.h  arc-dns.c  arc-dns.h  arc-internal.h  arc-keys.c  arc-keys.h  arc-mailparse.c  arc-mailparse.h  arc-tables.c  arc-tables.h  arc-types.h  arc-util.c  arc-util.h  arc.c  arc.h  base64.c  base64.h  openarc.pc.in
libopenarc/docs/: Makefile.am
openarc/: .gitignore  Makefile.am  config.c  config.h  openarc-ar.c  openarc-ar.h  openarc-config.h  openarc-crypto.c  openarc-crypto.h  openarc-test.c  openarc-test.h  openarc.8.in  openarc.c  openarc.conf.5.in  openarc.conf.sample  openarc.conf.simple  openarc.conf.simple.in  openarc.h  util.c  util.h
